--- a/_posts/2023-1-15-ucity1.md
+++ b/_posts/2023-1-15-ucity1.md
@@ -7,15 +7,22 @@ title: Trends of Multiple-Year Stack Overflow Survey
 > Programing languages preferred over time  
 > Programing language preference by global region and generation
 
-Stack Overflow is one of the most renowned question and answer websites for programmers, and is giving a clue on how the world of coding is changing from its survey results issued every year. I collected and analyzed the survey data from 2019 to 2022, and  found out some slight but significant changes over time.
-Overall demographic and professional characteristics of programmers
-At first, survey participants are not giving answers to all questions, and some questions have unidentified answers like ‘Something else’ that it seemed more reasonable not to make a conclusion in many cases.
-Lines with no answer (colored in white) in database columns
-The portions of survey participants in Europe, Asia and Africa are slightly increasing while that of America is decreasing.
+Stack Overflow is one of the most renowned question and answer websites for programmers, and is giving a clue on how the world of coding is changing from its survey results issued every year.  
+I have analyzed the survey data from 2019 to 2022, and found some significant changes over time as below. 
+
+**Overall demographic and professional characteristics of programmers**  
+
+The portions of survey participants in Europe, Asia and Africa are slightly increasing while that of America is decreasing.  
+
+![_config.yml]({{ site.baseurl }}/images/1-1.png)
+
 In gender there is no significant change with man about 90% and woman about 5%.
 In the question of whether coding is a main profession, the answer of yes stays at 75%. The portion of amateur programmers (Learning to Code and Coding as Hobby) is also at the same 15% to 16% level.
 
 For age, education level, employment status, the size of organizations where participants are working, there are huge uncertainty from changing high portion of no answers (marked as UNID - unidentified), that I made no conclusion.
+At first, survey participants are not giving answers to all questions, and some questions have unidentified answers like ‘Something else’ that it seemed more reasonable not to make a conclusion in many cases.
+Lines with no answer (colored in white) in database columns
+
 - Programing languages preferred over time
 In database languages, the portions of 'redis', 'postgresql' and 'mongodb' are increasing, while 'mysql' and 'microsoft sql server' are decreasing. 
 In programing languages, Language: the portions of 'typescript', 'python' and 'bash/shell/powershell'  are increasing, while 'sql', 'ocaml', 'C++' and 'C#' are  decreasing.  In future preference,
