--- a/_posts/2023-1-15-ucity1.md
+++ b/_posts/2023-1-15-ucity1.md
@@ -8,13 +8,13 @@ title: Trends of Multiple-Year Stack Overflow Survey
 > Programing language preference by global region and generation
 
 Stack Overflow is one of the most renowned question and answer websites for programmers, and is giving a clue on how the world of coding is changing from its survey results issued every year.  
-I have analyzed the survey data from 2019 to 2022, and found some significant changes over time as below. 
+I have analyzed the survey data from 2019 to 2022, and found out some significant changes over time as below. 
 
 **Overall demographic and professional characteristics of programmers**  
 
 The portions of survey participants in Europe, Asia and Africa are slightly increasing while that of America is decreasing.  
 
-![_config.yml]({{ site.baseurl }}/images/1-1.png)
+![]({{ site.baseurl }}/images/1-1.png)
 
 In gender there is no significant change with man about 90% and woman about 5%.
 In the question of whether coding is a main profession, the answer of yes stays at 75%. The portion of amateur programmers (Learning to Code and Coding as Hobby) is also at the same 15% to 16% level.
