--- a/_posts/2023-1-15-ucity1.md
+++ b/_posts/2023-1-15-ucity1.md
@@ -17,7 +17,12 @@ The portions of survey participants in Europe, Asia and Africa are slightly incr
 ![]({{ site.baseurl }}/images/1-1.png)
 
 In gender there is no significant change with man about 90% and woman about 5%.
+
+![]({{ site.baseurl }}/images/1-2.png)
+
 In the question of whether coding is a main profession, the answer of yes stays at 75%. The portion of amateur programmers (Learning to Code and Coding as Hobby) is also at the same 15% to 16% level.
+
+![]({{ site.baseurl }}/images/1-3.png)
 
 For age, education level, employment status, the size of organizations where participants are working, there are huge uncertainty from changing high portion of no answers (marked as UNID - unidentified), that I made no conclusion.
 At first, survey participants are not giving answers to all questions, and some questions have unidentified answers like ‘Something else’ that it seemed more reasonable not to make a conclusion in many cases.
