--- a/_posts/2023-1-15-ucity1.md
+++ b/_posts/2023-1-15-ucity1.md
@@ -8,7 +8,7 @@ title: Trends of Multiple-Year Stack Overflow Survey
 > Programing language preference by global region and generation
 
 Stack Overflow is one of the most renowned question and answer websites for programmers, and is giving a clue on how the world of coding is changing from its survey results issued every year.  
-I have analyzed the survey data from 2019 to 2022, and found out some significant changes over time as below. 
+I have analyzed the survey data from 2019 to 2022, and found out some interesting changes over time as below. 
 
 **Overall demographic and professional characteristics of programmers**  
 
@@ -16,17 +16,19 @@ The portions of survey participants in Europe, Asia and Africa are slightly incr
 
 ![]({{ site.baseurl }}/images/1-1.png)
 
-In gender there is no significant change with man about 90% and woman about 5%.
+In gender there is no significant change with the portion of man at about 90% and woman at about 5%.  
 
 ![]({{ site.baseurl }}/images/1-2.png)
 
-In the question of whether coding is a main profession, the answer of yes stays at 75%. The portion of amateur programmers (Learning to Code and Coding as Hobby) is also at the same 15% to 16% level.
+In the question of whether coding is a main profession, the answer of yes stays at 75%. The portion of amateur programmers (Learning to Code and Coding as Hobby) is also at stable 15% to 16% level.
 
 ![]({{ site.baseurl }}/images/1-3.png)
 
-For age, education level, employment status, the size of organizations where participants are working, there are huge uncertainty from changing high portion of no answers (marked as UNID - unidentified), that I made no conclusion.
-At first, survey participants are not giving answers to all questions, and some questions have unidentified answers like ‘Something else’ that it seemed more reasonable not to make a conclusion in many cases.
+In fact, survey participants are not giving answers to all questions, and some questions have no answer (marked as UNID - unidentified - in charts above) or answers with unclear meanings like ‘Something else’ that it seemed more reasonable not to make a conclusion in many cases.  
+For age, education level, employment status, the size of organizations where participants are working, there are huge uncertainty with fluctuating high portions of no or unclear answers, that I did not make any conclusion.  
+
 Lines with no answer (colored in white) in database columns
+![]({{ site.baseurl }}/images/0-1.png)
 
 - Programing languages preferred over time
 In database languages, the portions of 'redis', 'postgresql' and 'mongodb' are increasing, while 'mysql' and 'microsoft sql server' are decreasing. 
