--- a/_posts/2023-1-15-ucity1.md
+++ b/_posts/2023-1-15-ucity1.md
@@ -30,10 +30,17 @@ For age, education level, employment status, the size of organizations where par
 Lines with no answer (colored in white) in database columns
 ![]({{ site.baseurl }}/images/0-1.png)
 
-- Programing languages preferred over time
-In database languages, the portions of 'redis', 'postgresql' and 'mongodb' are increasing, while 'mysql' and 'microsoft sql server' are decreasing. 
-In programing languages, Language: the portions of 'typescript', 'python' and 'bash/shell/powershell'  are increasing, while 'sql', 'ocaml', 'C++' and 'C#' are  decreasing.  In future preference,
-Programing language preference by global region and generation
+**Programing languages preferred over time**  
+
+In database languages, the portions of 'redis', 'postgresql' and 'mongodb' are increasing, while 'mysql' and 'microsoft sql server' are decreasing.
+
+![]({{ site.baseurl }}/images/2-1.png)
+
+In programing languages, Language: the portions of 'typescript', 'python' and 'bash/shell/powershell'  are increasing, while 'sql', 'ocaml', 'C++' and 'C#' are  decreasing.
+
+![]({{ site.baseurl }}/images/2-2.png)
+
+**Programing language preference by global region and generation**  
 In yearly trends above, there are slight changes in trends and drastic moves are hardly found, that I proceeded further deep-dive on the language-related results using 2 dimension charts on year 2019 and 2022.
 Here axis y shows portions of language and  axis x gives information on the size of each region or age group. The size of each rectangle signifies how much share is gained in how much important region or age group, and the sum of areas of the same color shows how languages are performing in each group of region or age.
 About future preference on database languages, 
