--- a/_posts/2023-1-15-ucity1.md
+++ b/_posts/2023-1-15-ucity1.md
@@ -27,7 +27,7 @@ In the question of whether coding is a main profession, the answer of yes stays 
 In fact, survey participants are not giving answers to all questions, and some questions have no answer (marked as UNID - unidentified - in charts above) or answers with unclear meanings like ‘Something else’ that it seemed more reasonable not to make a conclusion in many cases.  
 For age, education level, employment status, the size of organizations where participants are working, there are huge uncertainty with fluctuating high portions of no or unclear answers, that I did not make any conclusion.  
 
-Lines with no answer (colored in white) in database columns
+*Lines with no answer (colored in white) in database columns*
 ![]({{ site.baseurl }}/images/0-1.png)
 
 **Programing languages preferred over time**  
@@ -41,22 +41,39 @@ In programing languages, Language: the portions of 'typescript', 'python' and 'b
 ![]({{ site.baseurl }}/images/2-2.png)
 
 **Programing language preference by global region and generation**  
-In yearly trends above, there are slight changes in trends and drastic moves are hardly found, that I proceeded further deep-dive on the language-related results using 2 dimension charts on year 2019 and 2022.
-Here axis y shows portions of language and  axis x gives information on the size of each region or age group. The size of each rectangle signifies how much share is gained in how much important region or age group, and the sum of areas of the same color shows how languages are performing in each group of region or age.
+
+In yearly trends above, there are some slight moves and drastic changes are hardly found, that I proceeded further deep-dive on the language-related results using 2 dimension charts on year 2019 and 2022.  
+
+Here axis y shows portions of languages and axis x gives information on the size of each region or age group. The size of each rectangle signifies how much share is gained in how much important region or age group, and the sum of areas of the same color shows how languages are performing in each group of region or age.
+
 About future preference on database languages, 
-’postgresqu' is gaining preference more in America and Europe.   
-The popularity of 'redis' and 'sqlite' are more evenly distributed in 3 main regions.     
-'mysql' is losing its share in all regions.
-In terms of age,    
-3%p increase of 'postgresqu' is mainly driven by age 25 to 44.    
-The future of 'redis' seems to be even better with drastic increase in Age under 18,     
-'sqlite' preference is moving to older generation.    
-'mongodb' stays at 11% preference, but younger generation's support on this language is also notable.  
+* ’postgresqu' is gaining preference more in America and Europe.  
+* The popularity of 'redis' and 'sqlite' are more evenly distributed in 3 main regions.  
+* 'mysql' is losing its share in all regions.  
+
+![]({{ site.baseurl }}/images/3-1.png)
+![]({{ site.baseurl }}/images/3-2.png)
+
+In terms of age,  
+* 3%p increase of 'postgresqu' is mainly driven by age 25 to 44.    
+* The future of 'redis' seems to be even better with drastic increase in Age under 18
+* 'sqlite' preference is moving to older generation.    
+* 'mongodb' stays at 11% preference, but younger generation's support on this language is also notable.  
+
+![]({{ site.baseurl }}/images/3-3.png)
+![]({{ site.baseurl }}/images/3-4.png)
+
 About future preference on programing languages, 
-'typerscript' is gaining popularity in all regions.    
-‘javascript' and 'html/css' are losing shares in most regions. 
+* 'typerscript' is gaining popularity in all regions.    
+* ‘javascript' and 'html/css' are losing shares in most regions. 
+
+![]({{ site.baseurl }}/images/3-5.png)
+![]({{ site.baseurl }}/images/3-6.png)
 
 In terms of age,    
-'typerscript' shows 2%p increase mainly driven by age under 25.   
-'javascript' and 'html/css' are losing shares in all ages.  
-'sql' is becoming the language of older people with its share staying at 8%.
+* 'typerscript' shows 2%p increase mainly driven by age under 25.   
+* 'javascript' and 'html/css' are losing shares in all ages.  
+* 'sql' is becoming the language of older people with its share staying at 8%.
+
+![]({{ site.baseurl }}/images/3-7.png)
+![]({{ site.baseurl }}/images/3-8.png)
