--- a/_posts/2023-1-15-ucity1.md
+++ b/_posts/2023-1-15-ucity1.md
@@ -4,8 +4,10 @@ title: The World of Coding Is Changing... How?
 ---
 
 > Where on the globe is the number of coding people increasing?  
-> What progrming languages are gaining more populatiry?  
-> What progrming languages will have better future?  
+> What programing languages are gaining more popularity?  
+> What programing languages will have better future? 
+![]({{ site.baseurl }}/images/blog-img.png) 
+
 
 Stack Overflow is one of the most renowned question and answer websites for programmers, and is giving a clue on how the world of coding is changing from its survey results issued every year.  
 I have analyzed the survey data from 2019 to 2022, and found out some interesting changes over time as below. 
