--- a/_posts/2023-1-15-ucity1.md
+++ b/_posts/2023-1-15-ucity1.md
@@ -79,3 +79,18 @@ In terms of age,
 
 ![]({{ site.baseurl }}/images/3-7.png)
 ![]({{ site.baseurl }}/images/3-8.png)
+
+So, let's return to the initial questions.
+
+**Where on the globe is the number of coding people increasing?**  
+It is not America. More people from Europe, Asia and Africa are coming  
+into the world of coding.  
+
+**What programing languages are gaining more popularity?**   
+'redis', 'postgresql' and 'mongodb' as database languages, and 'typescript',   
+'python' and 'bash/shell/powershell' as programing languages are becoming  
+more welcomed. 
+
+**What programing languages will have better future?**   
+'redis' and 'mongodb' are leading database solutions for younger people,  
+and people under 25 are giving more popularity to 'typerscript' in programing.
